--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-django
-libsass
-django-compressor
-django-sass-processor
-google-api-python-client
-google-auth-oauthlib
-google-auth-httplib2
+flask
+pyrebase
